# synfig-playground

./: CMakeLists.txt  README.md
skeleton/: CMakeLists.txt  skeleton.cpp  skeleton.h
timecurve/: CMakeLists.txt  timecurve.cpp  timecurve.h
timecurve/tests/: timecurve.cpp
